<resources>
    <string name="app_name">Where The Hoops At</string>
    <string name="home_text">Welcome</string>
    <string name="checkin_text">Check In</string>
    <string name="checkout_text">Check Out</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="PlayerCount_text">Players:</string>
    <string name="bric_text">BRIC</string>
    <string name="select_text">Select Court</string>
    <string name="test_court">Test</string>
    <string name="edit_Text">Edit Text</string>
</resources>