<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/court"
    tools:context=".Bric">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_text"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/orange"/>
            <TextView
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:text="@string/select_text"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="24dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/bric_text"
                android:id="@+id/bricButton"
                android:textSize="18sp"
                android:backgroundTint="@color/orange"
                app:cornerRadius = "20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/test_court"
                android:id="@+id/testButton"
                android:textSize="18sp"
                android:backgroundTint="@color/orange"
                app:cornerRadius = "20dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>