<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/court"
    tools:context=".Dashboard">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PlayerCount_text"
                android:id="@+id/players_text"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/orange"/>

            <TextView
                android:id="@+id/counter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/checkin_text"
                android:id="@+id/checkOutButton"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/orange"
                app:cornerRadius = "20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/checkout_text"
                android:id="@+id/checkInButton"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/orange"
                app:cornerRadius = "20dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>